# Sabbath

./: .env.template  .gitignore  .markdownlint-cli2.jsonc  CNAME  CODE_REFACTORING_PLAN.md  PRODUCTION_ACTION_PLAN.md  PRODUCTION_REMEDIATION_PLAN.md  PRODUCTION_SWEEP_REPORT.md  README.md  WHY_THESE_CHANGES.md  WORKSPACE_PAGES_RESTRUCTURE_PLAN.md  broadcast-output.html  eslint.config.js  index.html  maintainability-findings-fix-plan.md  package-lock.json  package.json  playwright.config.ts  production-safe-code-review-sabbathcue.md  production-safe-partials-fix-plan.md  vercel.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-web.yml  desktop-ci.yml  release-desktop.yml
api/: reviews.mjs
data/: afrikaans-semantic-benchmark.ts  bible_gateway.py  build-bible-db.ts  build-egw.ts  compute-embeddings.ts  convert-afrikaans-bible.ts  convert-egw-da-pdf.ts  convert-egw-ed-pdf.ts  convert-egw-gc-pdf.ts  convert-egw-pp-pdf.ts  convert-egw-sc-pdf.ts  download-gte-small.ts  download-model.ts  download-multilingual-model.ts  download-sources.ts  download-whisper-model.test.ts  download-whisper-model.ts  download-whisper.mjs  education-source.test.ts  export-multilingual-minilm-onnx.py  export-qwen3-onnx.py  import-egw-pp-from-egwwritings.ts  patriarchs-and-prophets-source.test.ts  precompute-embeddings-onnx.py  precompute-embeddings.py  prepare-embeddings.ts  schema.sql  steps-to-christ-source.test.ts  the-desire-of-ages-source.test.ts  the-great-controversy-source.test.ts  validate-egw-sources.ts
data/detection-fixtures/: sermon-transcript-cases.json
data/lib/: egw-paragraph-layout.test.ts  egw-paragraph-layout.ts  egw-pdf-importer.test.ts  egw-pdf-importer.ts  egw-text-cleanup.test.ts  egw-text-cleanup.ts  python-env.ts
docs/: CODEBASE.md  codebase-report.md  release-checklist.md  third-party-notices.md  updater-key-management.md
docs/plans/: 2026-07-02-ui-perf-quality-plan.md  2026-07-12-egw-sc-ed-gc-paragraph-fix-plan.md
docs/procurement/: README.md  privacy-data-flow.md  release-security-checklist.md  security-overview.md
docs/reports/: CODE_QUALITY_REPORT.md  CODE_REFACTORING_PLAN.md  DEBUGGING_REPORT.md  FUNCTIONALITY_TEST_REPORT.md  KINETIC_THEME_WORKFLOW_PLAN.md  PERFORMANCE_TEST_REPORT.md  PRODUCTION_ACTION_PLAN.md  PRODUCTION_REMEDIATION_PLAN.md  PRODUCTION_SWEEP_REPORT.md  SECURITY_TEST_REPORT.md  WHY_THESE_CHANGES.md  WORKSPACE_PAGES_RESTRUCTURE_PLAN.md  code-logic-review-fix-report.md  production-safe-partials-fix-plan.md
documentation/: remote-control.md
landing/: README.md  index.html  knfc.html  vercel.json
landing-knfcpilot/: README.md  index.html  vercel.json
landing-knfcpilot/api/: reviews.js
landing-knfcpilot/scripts/: vercel-build.mjs
public/: identify.html
scripts/: build-sherpa-sidecar.ps1  download-sherpa-model.ps1  download-vosk-model.ps1  faster_whisper_worker.py  generate-activation-lease-key.mjs  run-playwright-e2e.mjs  screenshot.mjs  setup-windows.ps1  sherpa_worker.py  test-knfc-reviews-handler.mjs  vercel-build.mjs  verify-knfc-installer-download.mjs  verify-public-db.ts  verify-windows-installer-download.mjs  vosk_worker.py
src/: App.tsx  broadcast-output.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/crates/api/src/: coerce.rs  http.rs  lib.rs  osc.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: capture.rs  device.rs  lib.rs  vad.rs
src-tauri/crates/bible/src/: crossref.rs  db.rs  egw.rs  error.rs  lib.rs  lookup.rs  models.rs  search.rs
src-tauri/crates/broadcast/src/: lib.rs  ndi.rs
src-tauri/crates/detection/: Cargo.toml
src-tauri/crates/detection/src/: lib.rs  merger.rs  pipeline.rs  reading_mode.rs  sentence_buffer.rs  types.rs
src-tauri/crates/detection/src/direct/: af_books.rs  automaton.rs  books.rs  detector.rs  fuzzy.rs  localized_books.rs  mod.rs  parser.rs
src-tauri/crates/detection/src/semantic/: chunker.rs  detector.rs  ensemble.rs  hnsw_index.rs  onnx_embedder.rs
src-tauri/crates/detection/tests/: afrikaans_semantic.rs  direct_fuzzy_regressions.rs  sermon_sovereignty_regressions.rs
src-tauri/crates/notes/src/: lib.rs
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/examples/: whisper_smoke.rs
src-tauri/crates/stt/src/: credentials.rs  deepgram.rs  error.rs  faster_whisper.rs  gladia.rs  keyterms.rs  lib.rs  provider.rs  rest.rs  sherpa.rs  soniox.rs  speechmatics.rs  vosk.rs  whisper.rs  worker.rs
src-tauri/src/: asset_paths.rs  lib.rs  logging.rs  memstats.rs  state.rs
src-tauri/src/commands/: assets.rs  audio.rs  bible.rs  broadcast.rs  detection.rs  egw.rs  egw_semantic.rs  installation_identity.rs  library.rs  mod.rs  path_guard.rs  powerpoint.rs  remote.rs  secrets.rs  stt.rs  theme_files.rs  transcript_router.rs  validation.rs  video.rs
src-tauri/src/commands/detection/: egw.rs  result.rs  semantic_search.rs  settings.rs
src-tauri/src/commands/stt/: detection.rs  detection_jobs.rs  detection_logic.rs  live_session.rs  mod.rs  provider.rs  tasks.rs  utils.rs  voice.rs
src-tauri/tests/: tauri_bundle_resources.rs
src/components/: settings-dialog.tsx
src/content/: help-legal.test.ts  help-legal.ts
src/data/: sda-hymnal-chunks.ts  sda-hymnal-index.ts
src/hooks/: use-app-update.test.ts  use-assets.ts  use-audio-devices.test.ts  use-audio-devices.ts  use-audio.ts  use-broadcast-output-runtime.test.ts  use-broadcast-output-runtime.ts  use-broadcast-output-settings.test.ts  use-broadcast-output-settings.ts  use-broadcast-video.test.tsx  use-broadcast-video.ts  use-context-verse-search.test.ts  use-context-verse-search.ts  use-dashboard-keyboard-controls.test.ts  use-dashboard-keyboard-controls.ts  use-deepgram-key-settings.test.ts  use-deepgram-key-settings.ts  use-detection-settings-sync.test.ts  (+19 more)
supabase/: config.toml
video/: README.md  package-lock.json  package.json
web/: README.md  next.config.ts  package.json
(+490 files in other folders)
