[workspace]
members = [
    ".",
    "crates/audio",
    "crates/stt",
    "crates/bible",
    "crates/detection",
    "crates/broadcast",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic warns about
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[package]
name = "sabbathcue"
version = "0.1.3"
description = "SabbathCue - Real-Time AI Bible Verse Detection"
authors = ["BongaNdlovu"]
license = "MIT"
repository = "https://github.com/BongaNdlovu/SabbathCue"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rhema_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "SabbathCue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
log.workspace = true
tokio.workspace = true
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
rhema-audio = { path = "crates/audio" }
rhema-bible = { path = "crates/bible" }
rhema-stt = { path = "crates/stt" }
rhema-broadcast = { path = "crates/broadcast" }
rhema-detection = { path = "crates/detection", features = ["onnx", "vector-search"] }
rhema-api = { path = "crates/api" }
crossbeam-channel = "0.5"
dotenvy = "0.15"
base64 = "0.22"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tauri-plugin-dialog = "2"
keyring = "3"
rand = "0.8"

[features]
default = ["whisper"]
whisper = ["rhema-stt/whisper"]

[lints]
workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
