[package]
name = "rhema-stt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.13", features = ["json", "stream"], optional = true }
url = "2"
futures-util = "0.3"
crossbeam-channel = "0.5"
async-trait = "0.1"
tempfile = "3"

[features]
default = ["rest-fallback", "gladia"]
gladia = ["reqwest"]
rest-fallback = ["reqwest"]

[[example]]
name = "transcription_bench"
path = "examples/transcription_bench.rs"
